# isl

./: .gitignore  pyproject.toml
notebooks/: 02.ipynb  scratch.ipynb
src/isl/: __init__.py  utils.py
