[project]
name = "isl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben Hardcastle", email = "ben.hardcastle@alleninstitute.org" }
]
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "polars>=1.29.0",
]

[project.scripts]
isl = "isl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
